--- a/snippets/personalisation-functions.liquid
+++ b/snippets/personalisation-functions.liquid
@@ -91,7 +91,7 @@ const changeButtonAction = (operation)=>{
   span.ajaxcart__product-meta.mid[data-is="personalised"]{
     display: block !important;
   }
-  tr[data-personalisation='true'] .product :is(._MID_Name, ._MID_Address, ._MID_Code){
-    display: none;
+  tr .product :is(._MID_Name, ._MID_Address, ._MID_Code){
+    display: none !important;
   }
 </style>
