--- a/sections/personalization-modal-section.liquid
+++ b/sections/personalization-modal-section.liquid
@@ -211,14 +211,14 @@
   }
   #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image .image-caption{
     position: absolute;
-    bottom: 0;
+    top: 5.8%;
   }
   #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image .image-caption p{
-    color: black;
+    color: #777;
   font-weight: bold;
-  font-style: oblique;
+  font-style: italic;
   text-align: center;
-  padding: 15px;
+  padding: 0 15px;
   line-height: normal;
   }
   #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image #customized-text-demo p{
