--- a/sections/personalization-modal-section.liquid
+++ b/sections/personalization-modal-section.liquid
@@ -362,7 +362,7 @@
   #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image #customized-text-demo.placement-cuff{
     right: 12%;
     top: 72%;
-    text-align: left;
+    text-align: right;
   }
   #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image #customized-text-demo.placement-hem{
     right: 27%;
@@ -414,6 +414,10 @@
     }
   }
   @media only screen and (max-width: 900px){
+    #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image .image-caption{
+      bottom: 5.8%;
+      top: unset;
+    }
     #personalisation-modal-wrapper .personalisation-modal .product-image{
       max-width: 420px;
       margin: auto;
@@ -428,14 +432,11 @@
       font-size: 1.5rem;
     }
     #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image #customized-text-demo.placement-cuff{
-      right: 9%;
-      top: 72%;
-      text-align: left;
+      right: 12.5%;
     }
     #personalisation-modal-wrapper .personalisation-modal .content-wrapper .product-image #customized-text-demo.placement-chest{
       right: 30%;
       top: 35%;
-      text-align: center;
     }
   }
   @media only screen and (max-width: 1150px){
