--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -3,9 +3,9 @@
     location.href = "/"
   {% endif %}
 </script>
-{% assign add_to_cart = 'Add to Bag' %}
+{% comment %} {% assign add_to_cart = 'Add to Bag' %}
 {% assign adding_to_cart = 'Adding' %}
-{% assign added_to_cart = 'Added' %}
+{% assign added_to_cart = 'Added' %} {% endcomment %}
 {% assign go_to_checkout = 'Go to Checkout' %}
 {% assign sold_out = 'Sold Out' %}
 {% assign unavailable = 'Unavailable' %}
