--- a/snippets/quick-view-ajaxify-cart.liquid
+++ b/snippets/quick-view-ajaxify-cart.liquid
@@ -21,7 +21,7 @@ Shopify.AjaxifyCart = (function($) {
   var _config = {
     
     // What you might want to change
-    addToCartBtnLabel:             'Add to cart',
+    addToCartBtnLabel:             'Add to bag',
     addedToCartBtnLabel:           'Thank you!',
     addingToCartBtnLabel:          'Adding...',
     soldOutBtnLabel:               'Sold Out',
